Fixed centering on images so looks more aligned on the actual ticket webpage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,7 +84,7 @@
 }
 
 .barcode {
-  float:left;
+  float:center;
 }
 
 .entryHabit {
